[package]
name = "handlebars-server"
description = "A simple server that generates HTML at runtime."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/handlebars-server"
documentation = "https://docs.rs/handlebars-server"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[[bin]]
name = "serve-hbs"
path = "src/main.rs"

[dependencies]
structopt = "0.3.14"
anyhow = "1.0.28"
tokio = { version = "0.2.20", features = ["macros", "rt-threaded"] }
warp = "0.2.2"
http = "0.2.1"
log = "0.4.8"
env_logger = "0.7.1"
