[package]
name = "handlebars-server"
description = "A simple server that generates HTML at runtime."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/handlebars-server"
documentation = "https://docs.rs/handlebars-server"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[[bin]]
name = "serve-hbs"
path = "src/main.rs"

[dependencies]
structopt = "0.3.14"
anyhow = "1.0.28"
tokio = { version = "0.2.20", features = ["macros", "rt-threaded", "sync"] }
warp = "0.2.2"
http = "0.2.1"
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0.106", features = ["derive"] }
toml = "0.5.6"
fn-error-context = "0.1.0"
handlebars = { version = "3.0.1", features = ["dir_source"] }
urlencoding = "1.0.0"
once_cell = "1.4.0"
serde_json = "1.0.53"
futures = "0.3.5"
